add gif, looks ten times cooler

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ul>
             <li class="pure-menu-selected"><a href="#">About</a></li>
             <li><a href="#">Download</a></li>
+            <li><a href="#">Manual</a></li>
         </ul>
         </div>
     </div>
@@ -22,8 +23,9 @@
         </div>
         <p>
             <strong>clumsy makes your network condition on Windows significantly worse, but in a controlled and interactive manner.</strong>
-            <br>
-            <br>
+        </p>
+        <h4>Introduction</h4>
+        <p>
             Leveraging the awesome <a href="">WinDivert library</a>, clumsy stops living network packets and capture them, introduces aritificial lag/drop/tamper/else  on demand, then send them away. Whether you want to track down weird bugs related to broken network, or evaluating your application on poor connections, clumsy will come in handy with awesome features: 
         </p>
         <ul class="textlist">
@@ -33,6 +35,12 @@
             <li>Your application keeps running, while clumsy can start and stop anytime.</li>
             <li>Interactive controll how bad the network can be, with enough feedback to tell you what's going on.</li>
         </ul>
+
+        <h4>In Action</h4>
+        <p>
+            Here's a demo of clumsy working on a localhost udp server, illustrated as animated gif:
+        </p>
+        <img class="demo" src="clumsy-demo.gif">
     </div>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 </div>
