--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </p>
         <h4>Introduction</h4>
         <p>
-            Leveraging the awesome <a href="">WinDivert library</a>, clumsy stops living network packets and capture them, lag/drop/tamper/.. the packets on demand, then send them away. Whether you want to track down weird bugs related to broken network, or evaluate your application on poor connections, clumsy will come in handy:
+            Leveraging the awesome <a href="http://reqrypt.org/windivert.html">WinDivert library</a>, clumsy stops living network packets and capture them, lag/drop/tamper/.. the packets on demand, then send them away. Whether you want to track down weird bugs related to broken network, or evaluate your application on poor connections, clumsy will come in handy:
         </p>
         <ul class="textlist">
             <li>No installation.</li>
