--- a/download.html
+++ b/download.html
@@ -27,8 +27,8 @@
         <h4>Releases</h4>
         <p><strong>Notice: clumsy only support Windows Vista, Windows 7 and above. 64bit Windows users are strongly recommanded to download the 64bit build.</strong></p>
         <ul class="textlist">
-            <li>32bit: <a href="">clumsy-0.1-win32.zip</a> (MD5:xxxx)</li>
-            <li>64bit: <a href="">clumsy-0.1-win64.zip</a> (MD5:xxxx)</li>
+            <li>32bit: <a href="https://github.com/jagt/clumsy/releases/download/0.1/clumsy-0.1-win32.zip">clumsy-0.1-win32.zip</a> (MD5:b8eb28c399f15f02112f5461f6465153)</li>
+            <li>64bit: <a href="https://github.com/jagt/clumsy/releases/download/0.1/clumsy-0.1-win64.zip">clumsy-0.1-win64.zip</a> (MD5:e75419e28321cdc2cb4ca6f9e4044fd0)</li>
         </ul>
 
         <h4>Install</h4>
