--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul>
             <li class="pure-menu-selected"><a href="index.html">About</a></li>
             <li><a href="download.html">Download</a></li>
-            <li><a href="download.html">Manual</a></li>
+            <li><a href="manual.html">Manual</a></li>
         </ul>
         </div>
     </div>
