--- a/manual.html
+++ b/manual.html
@@ -36,7 +36,7 @@
         </ul>
 
         <h4>Limitations</h4>
-        <p><strong>Be sure you don't skip this part.</strong></p>
+        <p><strong>! Be sure you don't skip this part.</strong></p>
         <p>
             There's some issues with no easy workaround found. So here's a list of limitations that you should be aware of before using clumsy.
         </p>
