add filter field table

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </ul>
         </div>
     </div>
-    <div class="centered">
+    <div class="centered-block">
         <div class="title">
         <h1>clumsy 0.1</h1>
         </div>
