chinese doc pt1

--- a/download.html
+++ b/download.html
@@ -58,7 +58,7 @@ mingw32-make -C build CC=gcc config=release64
             </pre>
         </p>
 
-        <h4>Technologies</h4>
+        <h4>Acknowledgements</h4>
         <p>
         Here's a list of things used to build clumsy. 
         <ul class="textlist">
