--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <li>No installation.</li>
             <li>No need for proxy setup or code change in your application.</li>
             <li>System wide network capturing means it works on any application.</li>
+            <li>Support not only HTTP, any protocol based on TCP/IP is supported.</li>
             <li>Works even if you're offline (ie, connecting from localhost to localhost).</li>
             <li>Your application keeps running, while clumsy can start and stop anytime.</li>
             <li>Interactive controll how bad the network can be, with enough visual feedback to tell you what's going on.</li>
